--- a/web/index.html
+++ b/web/index.html
@@ -72,7 +72,7 @@
     <section>
         <article>
             <header>
-                <h1>Hello :wave:</h1>
+                <h1>Hello</h1>
             </header>
             <p>
                 My name is Badr Choubai. I'm an early-career software
