--- a/web/index.html
+++ b/web/index.html
@@ -88,8 +88,7 @@
     <div id="ButtonBlock">
       <a
         href="https://www.github.com/BadrChoubai"
-        class="btn opaque"
-      >GitHub</a>
+        class="btn opaque">GitHub</a>
       <a
         href="https://www.meetup.com/active-after-work"
         class="btn opaque">Active After Work</a>
