--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,27 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge"/>
 	<title>Badr Choubai</title>
 	<style>
+		:root {
+			--background-color-theme-dark: #1d1d1d;
+			--color-theme-dark: #fff;
+
+			--background-color-theme-light: #ffff;
+			--color-theme-light: #121314;
+		}
+
+		/* semantic color variables for this project */
+		:root {
+			--color-background: var(--background-color-theme-light);
+			--color-text: var(--color-theme-light);
+		}
+
+		@media (prefers-color-scheme: dark) {
+			:root {
+				--color-background: var(--background-color-theme-dark);
+				--color-text: var(--color-theme-dark);
+			}
+		}
+
 		*,
 		*::before,
 		*::after {
@@ -18,8 +39,9 @@
 		}
 
 		body {
+			color: var(--color-text);
+			background-color: var(--color-background);
 			min-height: 100vh;
-			color: #121314;
 			transition: color 0.5s,
 			background-color 0.5s;
 			line-height: 1.6;
@@ -34,7 +56,7 @@
 			"Droid Sans",
 			"Helvetica Neue",
 			sans-serif;
-			font-size: calc(10px + 0.33vw);
+			font-size: 15px;
 			padding: 5vh 7vw;
 			text-rendering: optimizeLegibility;
 			-webkit-font-smoothing: antialiased;
@@ -55,7 +77,7 @@
 		a {
 			text-decoration: none;
 			white-space: nowrap;
-			color: #121314;
+			color: var(--color-text);
 			position: relative;
 		}
 
@@ -89,26 +111,31 @@
 		nav[role="navigation"] ul > li {
 			margin-right: 12px;
 		}
+
+		section {
+			margin-top: 2rem;
+		}
 	</style>
 </head>
 <body>
-<main>
-	<header>
-		<hgroup>
-			<h1>Badr Choubai</h1>
-			<p>Solving problems, nothing in particular.</p>
-		</hgroup>
-		<nav role="navigation">
-			<ul>
-				<li>
-					<a href="https://www.github.com/BadrChoubai">GitHub</a>
-				</li>
-				<li>
-					<a href="https://www.linkedin.com/in/badr-choubai/">LinkedIn</a>
-				</li>
-			</ul>
-		</nav>
-	</header>
+<header>
+	<hgroup>
+		<h1>Badr Choubai</h1>
+		<p>Solving problems, nothing in particular.</p>
+	</hgroup>
+	<nav role="navigation">
+		<ul>
+			<li>
+				<a href="https://www.github.com/BadrChoubai">GitHub</a>
+			</li>
+			<li>
+				<a href="https://www.linkedin.com/in/badr-choubai/">LinkedIn</a>
+			</li>
+		</ul>
+	</nav>
+</header>
+
+<main id="content">
 	<section>
 		<article>
 			<h2>Posts</h2>
